# airtable-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  _client.py  main.py  server.py
src/airtable/: __init__.py  config.py  tools.py  types.py
src/dedalus_labs_airtable_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
