[project]
name = "dedalus-labs-airtable-mcp"
version = "0.1.0"
description = "MCP server for Airtable with DAuth authentication"
requires-python = ">=3.11"
dependencies = [
    "dedalus-mcp>=0.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]